--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,10 +23,19 @@ jobs:
           distribution: "temurin"
           cache: "maven"
 
+      - name: Verify GitHub token permissions
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               https://api.github.com/user | jq -r '.login'
+
       - name: Set up settings.xml
         run: |
           mkdir -p ~/.m2
-          echo "<settings>
+          echo '<?xml version="1.0" encoding="UTF-8"?>
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+                                        http://maven.apache.org/xsd/settings-1.0.0.xsd">
             <servers>
               <server>
                 <id>github</id>
@@ -34,7 +43,7 @@ jobs:
                 <password>${{ secrets.GITHUB_TOKEN }}</password>
               </server>
             </servers>
-          </settings>" > ~/.m2/settings.xml
+          </settings>' > ~/.m2/settings.xml
 
       - name: Cache Maven packages
         uses: actions/cache@v4
