--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,11 +23,6 @@ jobs:
           distribution: "temurin"
           cache: "maven"
 
-      - name: Verify GitHub token permissions
-        run: |
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-               https://api.github.com/user | jq -r '.login'
-
       - name: Set up settings.xml
         run: |
           mkdir -p ~/.m2
@@ -40,7 +35,7 @@ jobs:
               <server>
                 <id>github</id>
                 <username>${{ secrets.GH_USERNAME }}</username>
-                <password>${{ secrets.GITHUB_TOKEN }}</password>
+                <password>${{ secrets.GH_TOKEN }}</password>
               </server>
             </servers>
           </settings>' > ~/.m2/settings.xml
