--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,12 +40,12 @@ jobs:
             </servers>
           </settings>' > ~/.m2/settings.xml
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+      # - name: Cache Maven packages
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.m2
+      #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+      #     restore-keys: ${{ runner.os }}-m2
 
       - name: Build with Maven
         run: mvn clean compile
