--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,22 +26,19 @@ jobs:
       - name: Set up settings.xml
         run: |
           mkdir -p ~/.m2
-          echo "<settings>
+          echo '<?xml version="1.0" encoding="UTF-8"?>
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+                                        http://maven.apache.org/xsd/settings-1.0.0.xsd">
             <servers>
               <server>
                 <id>github</id>
                 <username>${{ secrets.GH_USERNAME }}</username>
-                <password>${{ secrets.GITHUB_TOKEN }}</password>
+                <password>${{ secrets.GH_TOKEN }}</password>
               </server>
             </servers>
-          </settings>" > ~/.m2/settings.xml
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          </settings>' > ~/.m2/settings.xml
 
       - name: Build with Maven
         run: mvn clean compile
